--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "#Define the root dir for train_images\n",
-    "train_images_dir = '/home/faris.almalik/Desktop/plants_diseas/train_images'\n",
+    "train_images_dir = './/train_images'\n",
     "csv_path = './train.csv'\n",
     "\n",
     "#Define params \n",
@@ -86,9 +86,7 @@
    "source": [
     "train_df , test_df = train_test_split(data_df, test_size=0.1, stratify=data_df.label, random_state=random_state)\n",
     "train_df.reset_index(inplace = True, drop = True)\n",
-    "test_df.reset_index(inplace = True, drop = True)\n",
-    "# train_df.to_csv('train_new.csv', index = False)\n",
-    "# test_df.to_csv('test_new.csv', index = False)\n"
+    "test_df.reset_index(inplace = True, drop = True)"
    ]
   },
   {
@@ -127,6 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get class weights\n",
     "sum_samples = np.array(list(classes_counts_sorted.values())).sum()\n",
     "class_weights = 1./(np.array(list(classes_counts_sorted.values()))/sum_samples)\n",
     "class_weights = class_weights / class_weights.sum()\n",
@@ -198,87 +197,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Show image\n",
     "plt.imshow(test_dataset[200][0].numpy().transpose(1,2,0))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Define Criterion and Optim \n",
-    "lr = 2e-5\n",
-    "epochs = 1\n",
-    "criterion = torch.nn.CrossEntropyLoss(weight=torch.tensor(class_weights, dtype = torch.float).cuda())\n",
-    "# criterion = torch.nn.CrossEntropyLoss()\n",
-    "# model = torchvision.models.resnet50(pretrained=True, progress=True)\n",
-    "# model.fc = torch.nn.Linear(in_features= model.fc.in_features, out_features=num_classes)\n",
-    "model = timm.create_model('vit_base_patch16_224_in21k', pretrained =True, num_classes = 5).cuda()\n",
-    "optimizer = torch.optim.Adam(params= model.parameters(), lr = lr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_object = Train_Validate(\n",
-    "    model = model, train_loader = train_dataloader,\n",
-    "    test_loader= test_dataloader, epochs = epochs, optimizer = optimizer,\n",
-    "    criterion = criterion, device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#train the model \n",
-    "train_acc, train_loss, f1_train = model_object.fit_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(train_acc, '--*', color = 'yellow', label = 'Train ACC', alpha = 0.7)\n",
-    "plt.plot(train_loss, '--o', color = 'black', label = 'Train Loss')\n",
-    "plt.plot(f1_train, '-x', color = 'green', label = 'Train F1_Score', alpha = 0.2)\n",
-    "plt.legend()\n",
-    "plt.grid()\n",
-    "plt.xticks([i for i in range(1,epochs)])\n",
-    "plt.xlabel('Epochs')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_object.evaluation()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
